--- a/package.json
+++ b/package.json
@@ -1,18 +1,43 @@
 {
-  "name": "quotesforcreatives",
-  "version": "1.0.0",
-  "description": "Curated quotes by creatives, for creatives.",
-  "author": "Zach Urich",
-  "license": "ISC",
-  "engines": {
-    "node": ">=4.0.0"
-  },
+  "name": "quotes-by-creatives",
+  "version": "2.0.0",
   "dependencies": {
-    "autoprefixer": "^6.4.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "3.1.0",
-    "gulp-clean-css": "^2.0.13",
-    "gulp-sass": "^2.3.2",
-    "gulp-util": "^3.0.7"
+    "autoprefixer": "7.1.6",
+    "babel-loader": "7.1.2",
+    "css-loader": "0.28.7",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.5",
+    "html-webpack-plugin": "2.29.0",
+    "jest": "20.0.4",
+    "node-sass": "^4.7.2",
+    "object-assign": "4.1.1",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.8",
+    "promise": "8.0.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "0.19.0",
+    "svg-react-loader": "^0.4.5",
+    "url-loader": "0.6.2",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.4",
+    "whatwg-fetch": "2.0.3"
+  },
+  "scripts": {
+    "dev": "webpack-dev-server",
+    "build": "webpack -p",
+    "deploy": ""
+  },
+  "babel": {
+    "presets": [
+      "react",
+      "es2015"
+    ]
+  },
+  "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
   }
 }
