--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "autoprefixer": "7.1.6",
     "babel-loader": "7.1.2",
     "css-loader": "0.28.7",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "html-webpack-plugin": "2.29.0",
@@ -22,22 +23,24 @@
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
-    "whatwg-fetch": "2.0.3"
+    "whatwg-fetch": "2.0.3",
+    "wikiquote": "^0.4.1"
   },
   "scripts": {
     "dev": "webpack-dev-server",
-    "build": "webpack -p",
+    "dev-server": "nodemon server.js",
+    "build": "NODE_ENV='production' webpack",
     "deploy": ""
   },
   "babel": {
-    "presets": [
-      "react",
-      "es2015"
-    ]
+    "presets": ["react", "es2015"]
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "nodemon": "^1.15.1"
   }
 }
