--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "0.19.0",
     "svg-react-loader": "^0.4.5",
@@ -33,7 +36,10 @@
     "deploy": ""
   },
   "babel": {
-    "presets": ["react", "es2015"]
+    "presets": [
+      "react",
+      "es2015"
+    ]
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
