--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "file-loader": "1.1.5",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "node-sass": "^4.7.2",
+    "node-sass": "^6.0.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -30,10 +30,8 @@
     "wikiquote": "^0.4.1"
   },
   "scripts": {
-    "dev": "webpack-dev-server",
-    "dev:server": "nodemon server.js",
-    "build": "NODE_ENV='production' webpack",
-    "deploy": ""
+    "start": "npm run build && nodemon server.js",
+    "build": "NODE_ENV='production' webpack"
   },
   "babel": {
     "presets": [
